src/assets/_field.scss
@use 'sass:math';

.gds-field-group {
  display: flex;
  flex-direction: column;
  min-width: 50px;

  &.field-inline {
    flex: 1;
    display: flex;
    flex-direction: row;
    align-items: center;

    .field {
      flex: 1;
    }
    .field-label {
      display: inline-block;
      margin-right: 10px;
      margin-bottom: 0px;
      padding-bottom: unset;
    }
  }

  .field-label {
    display: flex;
    font-weight: 600;
    padding-bottom: 4px;
    align-items: center;

    .field-label-mandatory {
      padding-left: 4px;
      color: $error;
    }
  }

  .field-message {
    padding: 4px 0;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    color: $pebble;
    font-size: 12px;

    &.field-inverted {
      margin-top: 0px;
      padding: 4px 0;
    }

    .field-helper-text {
      font-style: italic;
    }

    .field-counter {
      text-align: right;
    }

    .field-error-message {
      color: $error;
    }
  }
}

.field-highlighted,
.field-highlighted input {
  color: $tangerine !important;
}

/**************/
/* Field size */
/**************/

.field {
  display: flex;
}

@for $size from 1 through 12 {
  .field-size-#{$size},
  .field-label-size-#{$size} {
    width: percentage(math.div($size, 12));
    flex: unset !important;
    flex-grow: unset !important;
  }
}

